2003-04-04  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (autosave_save_draft): If the composer isn't
	'dirty', then don't autosave the draft (no need to). Fixes bug
	#40764.

2003-04-03  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (menu_edit_select_all_cb): Add a select-all
	callback and verb.
	(composer_entry_focus_in_event_cb): Set our bonobo-ui verbs.

2003-04-02  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer-select-file.c (e_msg_composer_select_file): Guard
	against the filesel's selection being NULL. Fixes bug #40679.

2003-04-01  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (composer_entry_focus_in_event_cb): Keep track
	of which entry widget has focus.
	(composer_entry_focus_out_event_cb): Same.
	(control_entry_focus_in_event_cb): Same idea, but since this is in
	another component, tell that component that its widget has focus
	so it can merge bonoboui cut/copy/paste (and anything else) menus.
	(control_entry_focus_out_event_cb): Same.
	(setup_cut_copy_paste): Connect to the focus-in and focus-out
	events for all the entry widgets and the html editor.
	(menu_edit_cut_cb): New callback function since the composer will
	now own the Cut/Copy/Paste menu items sometimes (depending on
	which widget is in focus... confused yet? good).

	* e-msg-composer-hdrs.c (from_changed): Update the Reply-To entry
	to be a normal GtkEntry.
	(create_headers): Same.
	(e_msg_composer_hdrs_set_reply_to): Here too.
	(e_msg_composer_hdrs_get_reply_to): And finally here.

2003-04-01  Not Zed  <NotZed@Ximian.com>

	** See bug #40300 & probably others.

	* e-msg-composer.c (autosave_manager_query_load_orphans): make the
	composer arg a parent arg, its only used parent the dialogue.
	Fix caller casts.
	(e_msg_composer_check_autosave): new function, checks for
	autosave files, and recovers them per user instructions.

2003-03-31  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer-attachment.glade: Convert to libglade-2's format.
